# aoc-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc_2024/: constants.py  day_1.py  day_1_1.py  day_1_2.py  day_2.py  day_2_1.py  day_2_2.py  day_3.py  day_4.py  day_5.py
scripts/: script_day_1.py  script_day_1_1.py  script_day_1_2.py  script_day_2.py  script_day_2_1.py  script_day_3.py  script_day_4.py  script_day_5.py
src/: constanst.py  day_1_1.py  day_1_2.py
